@@ -1,3 +1,4 @@
+* Compatibility with Pioneer DJ "RekordBox" vinyls
 * Fix a bug where decimal numbers are parsed in an unexpected way
 
 v1.7 (2018-01-19)
